--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,12 @@ dependencies:
   google_sign_in: ^6.3.0
   url_launcher: ^6.3.1
   geocoding: ^2.0.0
+  shared_preferences: ^2.5.3
+  connectivity_plus: ^4.0.2
+  firebase_core: ^2.15.0
+  firebase_auth: ^4.11.0
+  flutter_facebook_auth: ^6.0.3
+
   
 dev_dependencies:
   flutter_test:
@@ -32,3 +38,5 @@ flutter:
   uses-material-design: true
   assets:
     - assets/logo.png
+    - assets/icons/google.png
+    - assets/icons/facebook.png
